--- a/pInterface.lpi
+++ b/pInterface.lpi
@@ -48,7 +48,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="45" Y="21"/>
-        <UsageCount Value="66"/>
+        <UsageCount Value="69"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -59,9 +59,9 @@
         <UnitName Value="ufrmInicial"/>
         <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="31"/>
-        <CursorPos X="36" Y="61"/>
-        <UsageCount Value="66"/>
+        <TopLine Value="99"/>
+        <CursorPos X="3" Y="105"/>
+        <UsageCount Value="69"/>
         <Bookmarks Count="1">
           <Item0 X="3" Y="123" ID="3"/>
         </Bookmarks>
@@ -77,9 +77,9 @@
         <UnitName Value="uFodastico"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="76"/>
-        <CursorPos X="3" Y="78"/>
-        <UsageCount Value="65"/>
+        <TopLine Value="5"/>
+        <CursorPos X="55" Y="13"/>
+        <UsageCount Value="68"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit2>
@@ -101,12 +101,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="uInterfaceteste"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="9"/>
         <WindowIndex Value="0"/>
         <TopLine Value="70"/>
         <CursorPos X="11" Y="85"/>
-        <UsageCount Value="65"/>
+        <UsageCount Value="68"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit4>
@@ -128,18 +127,23 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="uTreeview"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="384"/>
-        <CursorPos X="3" Y="418"/>
-        <UsageCount Value="65"/>
+        <TopLine Value="16"/>
+        <CursorPos X="26" Y="24"/>
+        <UsageCount Value="68"/>
+        <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit6>
       <Unit7>
         <Filename Value="units\ucoisa.pas"/>
         <UnitName Value="Ucoisa"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
         <TopLine Value="15"/>
-        <CursorPos X="30" Y="23"/>
+        <CursorPos X="60" Y="24"/>
         <UsageCount Value="20"/>
+        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="C:\lazarus\lcl\include\control.inc"/>
@@ -247,7 +251,7 @@
       <Unit21>
         <Filename Value="units\uFuncoes.pas"/>
         <UnitName Value="uFuncoes"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="20" Y="99"/>
@@ -269,11 +273,12 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="ufrmabas"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="46" Y="11"/>
-        <UsageCount Value="39"/>
+        <TopLine Value="127"/>
+        <CursorPos X="43" Y="152"/>
+        <UsageCount Value="42"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit23>
@@ -284,11 +289,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="ufrmBaseTdi"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="0"/>
         <TopLine Value="28"/>
-        <CursorPos X="18" Y="69"/>
-        <UsageCount Value="39"/>
+        <CursorPos X="26" Y="33"/>
+        <UsageCount Value="42"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit24>
@@ -302,7 +307,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="165"/>
         <CursorPos X="15" Y="165"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="33"/>
         <Bookmarks Count="2">
           <Item0 X="30" Y="421" ID="1"/>
           <Item1 X="16" Y="9" ID="2"/>
@@ -313,7 +318,7 @@
       <Unit26>
         <Filename Value="units\uttabsheettdi.pas"/>
         <UnitName Value="uttabsheettdi"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="10"/>
         <WindowIndex Value="0"/>
         <TopLine Value="22"/>
         <CursorPos X="63" Y="48"/>
@@ -344,10 +349,10 @@
       <Unit30>
         <Filename Value="units\uclassificador.pas"/>
         <UnitName Value="Uclassificador"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="8"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="118"/>
-        <CursorPos X="1" Y="140"/>
+        <TopLine Value="986"/>
+        <CursorPos X="1" Y="1008"/>
         <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit30>
@@ -362,123 +367,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="forms\uInterfaceteste.pas"/>
-        <Caret Line="173" Column="5" TopLine="134"/>
+        <Caret Line="21" Column="32" TopLine="1"/>
       </Position1>
       <Position2>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="219" Column="5" TopLine="176"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="179" Column="29" TopLine="156"/>
       </Position2>
       <Position3>
-        <Filename Value="forms\uInterfaceteste.pas"/>
-        <Caret Line="201" Column="5" TopLine="174"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="186" Column="29" TopLine="163"/>
       </Position3>
       <Position4>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="249" Column="5" TopLine="217"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="133" Column="1" TopLine="131"/>
       </Position4>
       <Position5>
-        <Filename Value="forms\uInterfaceteste.pas"/>
-        <Caret Line="209" Column="7" TopLine="203"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="61" Column="25" TopLine="46"/>
       </Position5>
       <Position6>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="252" Column="7" TopLine="246"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="225" Column="37" TopLine="196"/>
       </Position6>
       <Position7>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="350" Column="3" TopLine="347"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="134" Column="38" TopLine="103"/>
       </Position7>
       <Position8>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="344" Column="3" TopLine="341"/>
+        <Filename Value="units\uFuncoes.pas"/>
+        <Caret Line="824" Column="10" TopLine="756"/>
       </Position8>
       <Position9>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="343" Column="7" TopLine="322"/>
+        <Filename Value="forms\uInterfaceteste.pas"/>
+        <Caret Line="85" Column="11" TopLine="70"/>
       </Position9>
       <Position10>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="347" Column="9" TopLine="323"/>
+        <Filename Value="forms\uFodastico.pas"/>
+        <Caret Line="19" Column="36" TopLine="1"/>
       </Position10>
       <Position11>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="349" Column="41" TopLine="323"/>
+        <Filename Value="forms\uFodastico.pas"/>
+        <Caret Line="21" Column="36" TopLine="1"/>
       </Position11>
       <Position12>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="368" Column="11" TopLine="346"/>
+        <Filename Value="forms\uFodastico.pas"/>
+        <Caret Line="15" Column="3" TopLine="5"/>
       </Position12>
       <Position13>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="458" Column="1" TopLine="415"/>
+        <Filename Value="forms\uFodastico.pas"/>
+        <Caret Line="13" Column="55" TopLine="5"/>
       </Position13>
       <Position14>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="368" Column="11" TopLine="346"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="11" Column="46" TopLine="10"/>
       </Position14>
       <Position15>
-        <Filename Value="forms\uInterfaceteste.pas"/>
-        <Caret Line="316" Column="37" TopLine="291"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="23" Column="22" TopLine="1"/>
       </Position15>
       <Position16>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="374" Column="11" TopLine="352"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="22" Column="22" TopLine="1"/>
       </Position16>
       <Position17>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="253" Column="7" TopLine="171"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="21" Column="22" TopLine="1"/>
       </Position17>
       <Position18>
-        <Filename Value="forms\abas\ufrmInterface1.pas"/>
-        <Caret Line="252" Column="5" TopLine="177"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="20" Column="35" TopLine="1"/>
       </Position18>
       <Position19>
-        <Filename Value="forms\ufrmbasetdi.pas"/>
-        <Caret Line="33" Column="26" TopLine="25"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="21" Column="22" TopLine="1"/>
       </Position19>
       <Position20>
-        <Filename Value="forms\ufrmbasetdi.pas"/>
-        <Caret Line="49" Column="16" TopLine="26"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="22" Column="22" TopLine="1"/>
       </Position20>
       <Position21>
-        <Filename Value="units\uttabsheettdi.pas"/>
-        <Caret Line="54" Column="1" TopLine="22"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="23" Column="22" TopLine="1"/>
       </Position21>
       <Position22>
-        <Filename Value="units\uttabsheettdi.pas"/>
-        <Caret Line="34" Column="19" TopLine="11"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="24" Column="22" TopLine="1"/>
       </Position22>
       <Position23>
-        <Filename Value="forms\uInterfaceteste.pas"/>
-        <Caret Line="21" Column="32" TopLine="1"/>
+        <Filename Value="forms\ufrminicial.pas"/>
+        <Caret Line="25" Column="22" TopLine="1"/>
       </Position23>
       <Position24>
         <Filename Value="forms\ufrmabas.pas"/>
-        <Caret Line="179" Column="29" TopLine="156"/>
+        <Caret Line="136" Column="46" TopLine="106"/>
       </Position24>
       <Position25>
         <Filename Value="forms\ufrmabas.pas"/>
-        <Caret Line="186" Column="29" TopLine="163"/>
+        <Caret Line="138" Column="46" TopLine="108"/>
       </Position25>
       <Position26>
         <Filename Value="forms\ufrmabas.pas"/>
-        <Caret Line="133" Column="1" TopLine="131"/>
+        <Caret Line="144" Column="27" TopLine="121"/>
       </Position26>
       <Position27>
         <Filename Value="forms\ufrmabas.pas"/>
-        <Caret Line="61" Column="25" TopLine="46"/>
+        <Caret Line="248" Column="35" TopLine="208"/>
       </Position27>
       <Position28>
-        <Filename Value="forms\ufrmabas.pas"/>
-        <Caret Line="225" Column="37" TopLine="196"/>
+        <Filename Value="forms\uTreeview.pas"/>
+        <Caret Line="23" Column="36" TopLine="16"/>
       </Position28>
       <Position29>
         <Filename Value="forms\ufrmabas.pas"/>
-        <Caret Line="134" Column="38" TopLine="103"/>
+        <Caret Line="248" Column="35" TopLine="208"/>
       </Position29>
       <Position30>
-        <Filename Value="units\uFuncoes.pas"/>
-        <Caret Line="824" Column="10" TopLine="756"/>
+        <Filename Value="forms\ufrmabas.pas"/>
+        <Caret Line="255" Column="35" TopLine="215"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -511,7 +516,7 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="6">
+    <BreakPoints Count="5">
       <Item1>
         <Source Value="C:\lazarus\fpc\2.4.2\source\rtl\objpas\classes\lists.inc"/>
         <Line Value="615"/>
@@ -529,13 +534,9 @@
         <Line Value="434"/>
       </Item4>
       <Item5>
-        <Source Value="units\ucoisa.pas"/>
-        <Line Value="45"/>
-      </Item5>
-      <Item6>
         <Source Value="forms\abas\ufrmInterface1.pas"/>
         <Line Value="425"/>
-      </Item6>
+      </Item5>
     </BreakPoints>
     <Exceptions Count="3">
       <Item1>
